<resources>
    <string name="app_name">Instagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="instagram_desc">\'Instagram\' written in billabong font</string>
    <string name="post_desc">User takes a picture to post</string>
    <string name="desc">Enter a caption for your post</string>
    <string name="btn_Cam">Take Picture</string>
    <string name="post_text">Submit Post</string>
    <string name="titlebar_text">Instagram text again as a title bar</string>
    <string name="dmBar_text">Instagram DM icon in title bar</string>
    <string name="heartBar_text">Instagram heart icon in title bar</string>
    <string name="user_text">Instagram user icon in bottom to be nav bar for logging out</string>
    <string name="logout_text">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
</resources>
