<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ComposeFragment">

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/post_desc"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ivPicture"
        android:contentDescription="@string/btn_Cam"
        android:src="@drawable/camera_button" />

    <EditText
        android:id="@+id/etCaption"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/ivPicture"
        android:layout_marginTop="20dp"
        android:includeFontPadding="true"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:gravity="start|top"
        android:background="@color/dark_grey"
        android:hint="@string/desc"
        android:autofillHints="@string/desc"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/light_grey"
        android:inputType="textMultiLine"
        android:ems="10"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnPost"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etCaption"
        android:layout_marginTop="10dp"
        android:text="@string/post_text" />

</RelativeLayout>