<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:contentDescription="@string/titlebar_text"
        android:src="@drawable/instagram" />

    <ImageView
        android:id="@+id/ivDMs"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/dmBar_text"
        android:src="@drawable/direct"
        />

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:layout_toStartOf="@+id/ivDMs"
        android:paddingEnd="20dp"
        android:contentDescription="@string/heartBar_text"
        android:src="@drawable/ufi_heart"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/ivPost"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:scaleType="fitStart"
        android:layout_toStartOf="@+id/ivHeart"
        android:paddingEnd="20dp"
        android:contentDescription="@string/heartBar_text"
        android:src="@drawable/instagram_new_post_outline_24"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/logout_text" />

</RelativeLayout>

