<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/finstagram"
        android:contentDescription="@string/finstagram_desc"
        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:includeFontPadding="true"
        android:paddingStart="10dp"
        android:inputType="text"
        android:background="@color/dark_grey"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        android:hint="@string/username"
        android:autofillHints="@string/username"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:includeFontPadding="true"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:background="@color/dark_grey"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Login" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

</LinearLayout>
