<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="35dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:scaleType="fitStart"
            android:contentDescription="@string/titlebar_text"
            android:src="@drawable/nux_dayone_landing_logo" />

        <ImageView
            android:id="@+id/ivDMs"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitStart"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/dmBar_text"
            android:src="@drawable/direct"
            />

        <ImageView
            android:id="@+id/ivHeart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitStart"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ivDMs"
            android:contentDescription="@string/heartBar_text"
            android:src="@drawable/ufi_heart" />

        <ImageView
            android:id="@+id/ivPost"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitStart"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ivHeart"
            android:contentDescription="@string/heartBar_text"
            android:src="@drawable/instagram_new_post_outline_24"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>

    <FrameLayout
       android:id="@+id/flContainer"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="0dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@+id/title_bar"
       android:layout_above="@id/bottomNavigation"
       />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"
        android:background="@color/black"
        app:itemIconTint="@color/white"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bottom_navigation" />
</RelativeLayout>
